--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,51 +1,7 @@
-/*=================Scss Indexing=============
-1.variables
-2.typography
-3.spacing
-4.reset
-5.forms
-6.mixins
-7.shortcode
-8.animations
-9.text-animation
-10.sal
-11.header
-12.mobile-menu
-13.button
-14.nav
-15.banner
-16.swiper
-17.funfacts
-18.cta
-19.about
-20.common
-21.service
-22.projects
-23.working-process
-24.blog
-25.blog-details
-26.footer
-27.search-input
-28./side-bar
-29.team
-30.testimonials
-31.faq
-32.pricing
-33.date-picker
-34.time-picker
-35.appoinment
-36.awesome-feedback
-37.contact
-38.pre-loader.scss
-39.back-to-top
-
-
-
-==============================================  */
 /* Default  */
 @import url("https://db.onlinewebfonts.com/c/d95bf2f30035a050142565e03d44da71?family=Aeonik");
 :root {
-  --color-primary: #3534FF;
+  --color-primary: #0e4993;
   --color-secondary: #1F1F25;
   --color-body: #262626;
   --color-heading-1: #262626;
@@ -12959,7 +12915,7 @@ li.has-dropdown:hover .submenu {
 
 .banner-wrapper-one .title {
   font-weight: 400;
-  font-size: 80px;
+  font-size: 60px;
   line-height: 90%;
   margin-bottom: 30px;
 }
@@ -20137,3 +20093,16 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
   }
 }
 /*# sourceMappingURL=../maps/style.css.map */
+
+
+
+
+
+
+
+
+
+.header_logo{
+      height: 70px;
+    width: auto;
+}
