--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20106,3 +20106,8 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
       height: 70px;
     width: auto;
 }
+
+.sticky_header_logo{
+      height: 55px;
+    width: auto;
+}
