--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14977,7 +14977,7 @@ Copyright (c) 2015 Daniel Eden
 }
 
 .menu-item-open>a {
-  color: #5956FF !important;
+  color: #ff6d00  !important;
 }
 
 .menu-item-open>a i::before {
