--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14977,7 +14977,7 @@ Copyright (c) 2015 Daniel Eden
 }
 
 .menu-item-open>a {
-  color: #ff6d00  !important;
+  color: #ff6d00 !important;
 }
 
 .menu-item-open>a i::before {
@@ -19860,6 +19860,7 @@ li.has-dropdown:hover .submenu {
 .rts-footer-area .logo {
   display: block;
   margin-bottom: 20px;
+  max-width: 280px;
 }
 
 .rts-footer-area .logo-area {
@@ -23915,12 +23916,12 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
 
 .services_list_feature>div {
   width: 33%;
-      min-width: 260px;
+  min-width: 260px;
   justify-content: center;
 }
 
 @media screen and (min-width: 767px) {
-  .service_home_card{
+  .service_home_card {
     height: 340px;
   }
 }
